@@ -24,6 +24,7 @@
 	- have debug sub-subpackage use external, not internal, elfutils.
 	- apply patches 1-6 to db-4.1.24.
 	- resurrect availablePackages one more time.
+	- fix: option conflict error message (#77373).
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
